# ghostpirates

./: .claudeignore  .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.claude/: GETTING_STARTED.md  PROJECT_CONTEXT.md
.claude/commands/: review-progress.md  start-sprint.md  (+1 more)
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 20251108000001_create_companies_table.sql  20251108000002_create_users_table.sql  20251108000003_create_teams_table.sql  20251108000004_create_team_members_table.sql  20251108000005_create_tasks_table.sql  20251108000006_create_messages_table.sql  20251108000007_create_checkpoints_table.sql  20251108000008_create_cost_tracking_table.sql
apps/api/src/: lib.rs  main.rs
apps/api/src/agents/: errors.rs  events.rs  manager.rs  messages.rs  mod.rs  prompts.rs  state.rs  types.rs  worker.rs
apps/api/src/api/: errors.rs  mod.rs
apps/api/src/api/handlers/: auth.rs  mod.rs  teams.rs
apps/api/src/api/middleware/: auth.rs
apps/api/src/auth/: jwt.rs  mod.rs  password.rs
apps/api/src/domain/: mod.rs
apps/api/src/domain/repositories/: mod.rs  team_repository.rs  user_repository.rs
apps/api/src/domain/team/: events.rs  mod.rs  team.rs  value_objects.rs
apps/api/src/domain/user/: mod.rs  value_objects.rs
apps/api/src/infrastructure/: mod.rs
apps/api/src/infrastructure/repositories/: mod.rs  postgres_team_repository.rs  postgres_user_repository.rs
apps/api/tests/: api_integration.rs  repository_integration.rs
infrastructure/: README.md
(+164 files in other folders)
