[package]
name = "ghostpirates-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
async-trait = "0.1"
rust_decimal = { version = "1.33", features = ["db-postgres", "serde"] }
thiserror = "1.0"
